@@ -98,6 +98,10 @@ def retrieve_meshes(context, hierarchy, rig, container_name, force_vertex_materi
                     context.warning(f'mesh \'{mesh_object.name}\' vertex {i} both bone weights where 0!')
                     vert_inf.bone_inf = 1.0
 
+                if abs(vert_inf.bone_inf + vert_inf.xtra_inf - 1.0) > 0.1:
+                    context.warning(f'mesh \'{mesh_object.name}\' vertex {i} both bone weights did not add up to 100%!')
+                    vert_inf.bone_inf = 1.0 - vert_inf.xtra_inf
+
                 mesh_struct.vert_infs.append(vert_inf)
 
                 if vert_inf.bone_idx > 0:
