@@ -1,5 +1,6 @@
 v0.6.5
 - cancel export if a mesh and a bone share the same name
+- inform user if both vertex bone weights do not add up to 100%
 - Bugfix: handling of specular and emission color
 - Bugfix: use proper file extension for loaded textures
 - Bugfix: wrong version for TimecodedAnimationHeader caused W3DViewer and game to crash
